# workflow_objc

./: ArchitectureHooks.cpp  ArchitectureHooks.h  BinaryNinja.h  CMakeLists.txt  Commands.cpp  Commands.h  Constants.h  CustomTypes.cpp  CustomTypes.h  DataRenderers.cpp  DataRenderers.h  GlobalState.cpp  GlobalState.h  InfoHandler.cpp  InfoHandler.h  MessageHandler.cpp  MessageHandler.h  ObjCMessageHandler.cpp  ObjCMessageHandler.h  Plugin.cpp  README.md  Workflow.cpp  Workflow.h
Core/: ABI.cpp  ABI.h  AbstractFile.cpp  AbstractFile.h  AnalysisInfo.cpp  AnalysisInfo.h  AnalysisProvider.cpp  AnalysisProvider.h  Analyzer.cpp  Analyzer.h  BinaryViewFile.cpp  BinaryViewFile.h  TypeParser.cpp  TypeParser.h
Core/Analyzers/: CFStringAnalyzer.cpp  CFStringAnalyzer.h  ClassAnalyzer.cpp  ClassAnalyzer.h  ClassRefAnalyzer.cpp  ClassRefAnalyzer.h  SelectorAnalyzer.cpp  SelectorAnalyzer.h
